# identity

./: .gitignore  .rustfmt.license-template  Cargo.toml  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: create-do-app.yml  delete-do-app.yml  rust.yml
adi/: Cargo.toml  README.md
adi/src/: error.rs  gf.rs  lib.rs
api/: .gitignore  Cargo.toml  Dockerfile  Dockerfile-pr  README.md
api/example/: seed  seed.pub  service-get.sh  session-get.sh  session-id.b64  session-patch.json  session-patch.sh  session-put.json  session-put.sh  timestamp-sig  vault-bin  vault-get.sh  vault-put.sh  vault-sig  vault-sig-bin
api/example/services/: hello
api/example/sessions/: r8N1EOII3DAfb1BCcbPfSu9uXF717C0xrJaf7kGi4Pk=
api/res/: regexes.yaml
api/src/: assistant.rs  auth.rs  auth2.rs  brandfetch.rs  lib.rs  magic_share.rs  mailbox.rs  main.rs  store.rs  twilio.rs  verify_token.rs
api/src/store/: file.rs  s3.rs
api/static/: services.json
api/tests/: requests.rs  service_list.rs  services.json
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
djb/: Cargo.toml  README.md
djb/src/: lib.rs
ffi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  clean.sh  notbuild.rs  sumo-xcode12.sh  sumo-xcode13.sh  sumo.sh  x86_64-apple-ios7.0.json
ffi/include/: libuno.h
ffi/src/: lib.rs
ffi/xcode12/: aarch64-apple-ios7.0.0.json
ffi/xcode13/: x86_64-apple-ios7.0.0-sim.json
lib/: Cargo.toml  README.md
lib/src/: error.rs  lib.rs
s39/: Cargo.toml  README.md
s39/src/: error.rs  lib.rs
wsm/: Cargo.toml  README.md  package.json  webpack.config.js
wsm/pkg/: wsm.d.ts  wsm.js  wsm_bg.js  wsm_bg.wasm  wsm_bg.wasm.d.ts
wsm/src/: lib.rs
wsm/tests/: wasm.rs
xcf/: Cargo.toml  build.rs  cbindgen.toml  sumo.sh
xcf/include/: uno.h
xcf/src/: lib.rs
xcf/xcode12/: aarch64-apple-ios14.0-macabi.json  aarch64-apple-ios14.0-simulator.json  sumo.sh  x86_64-apple-ios7.0.0-simulator.json
xcf/xcode13/: aarch64-apple-ios7.0.0.json  sumo.sh
