[package]
name = "adi"
version = "0.1.0"
authors = ["dcow <david@withuno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.7.1"
ed25519-dalek = "1.0.1"
generic-array = "0.14.4"
rand = "0.8"
subtle = "2.4"
