[package]
name = "api"
version = "0.1.0"
authors = ["David Cowden <david@withuno.com>"]
license = "AGPL-3.0-only"
edition = "2018"

[features]
s3 = []

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1"
base64 = "0.13"
json-patch = "0.2"
rusty-s3 = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.2.0"
tempfile = "3.2"
tide = "0.16"
uno = "0.1.0"
