[package]
name = "api"
version = "0.1.0"
authors = ["David Cowden <david@withuno.com>"]
license = "AGPL-3.0-only"
edition = "2018"

[features]
filestore = []

[dependencies]
anyhow = "1.0"
argon2 = "0.2"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1"
base64 = "0.13"
blake3 = "0.3"
http-types = "2.11"
json-patch = "0.2"
password-hash = "0.2"
rand = "0.8"
rusty-s3 = { git = "https://github.com/withuno/rusty-s3.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.2.0"
tempfile = "3.2"
tide = "0.16"
uno = "0.1"
walkdir = "2"

serde-xml-rs = "0.4.1"
