[package]
name = "api"
version = "0.1.0"
authors = ["David Cowden <david@uno.app>"]
license = "AGPL-3.0-only"
edition = "2021"

[features]
s3 = []
twilio = []
openai = []
brandfetch = []

[dependencies]
anyhow = "1.0"
argon2 = "0.2"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
base64 = "0.13"
blake3 = "0.3"
chrono = "0.4"
futures = "0.3"
http-types = "2.11"
"indoc" = "2"
json-patch = "0.2"
password-hash = "0.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusty-s3 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
surf = "2.3"
tempfile = "3.2"
thiserror = "1.0"
tide = "0.16"
user-agent-parser = "0.3"
uno = { path = "../lib" }
vclock = "0.2"
walkdir = "2"

urlencoding = "1.3.3"
serde-xml-rs = "0.4.1"

[dev-dependencies]
regex = "1.5"
