[package]
name = "cli"
version = "0.1.0"
authors = ["David Cowden <david@withuno.com>"]
license = "AGPL-3.0-only"
edition = "2018"

[[bin]]
name = "uno"
path = "src/main.rs"

[dependencies]
uno = "0.1.0"
djb = "0.1.0"

anyhow = "1.0"
argon2 = "0.2"
async-std = "1.9"
base64 = "0.13"
blake3 = "0.3"
clap = { version = "3.0.0-beta.4", features = ["wrap_help"] }
chrono = "0.4"
http-types = "2.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.2"

