[package]
name = "cli"
version = "0.1.0"
authors = ["David Cowden <david@uno.app>"]
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "uno"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
uno = { path = "../lib" }
djb = { path = "../djb" }

anyhow = "1.0"
argon2 = "0.2"
async-std = "1.9"
base64 = "0.13"
blake3 = "0.3"
clap = { version = "3", features = ["derive", "wrap_help"] }
chrono = "0.4"
dirs-next = "2.0"
http-types = "2.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.7"
surf = "2.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
vclock = "0.2"
