[package]
name = "djb"
version = "0.1.0"
authors = ["David Cowden <david@withuno.com>"]
license = "AGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.7.1", features = ["std"] }
ed25519-dalek = "1.0.1"
rand = "0.8.3"
strum = "0.20"
strum_macros = "0.20"

