[package]
name = "djb"
version = "0.1.0"
authors = ["David Cowden <david@uno.app>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.7.1", features = ["std"] }
ed25519-dalek = "2.0"
rand = "0.8.3"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
base64 = "0.13"
