[package]
name = "uno"
version = "0.1.0"
authors = ["David Cowden <david@withuno.com>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
adi = { path = "../adi" }
djb = { path = "../djb" }
s39 = { path = "../s39" }

argon2 = "0.1"
base64 = "0.13"
blake3 = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
strum = "0.21"
strum_macros = "0.21"
