[package]
name = "s39"
version = "0.1.0"
authors = ["dcow <david@uno.app>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0"
failure = "0.1"
rand = "0.8"

sssmc39 = { git = "https://github.com/withuno/rust-sssmc39.git", features = ["rust_crypto_pbkdf2"], default-features = false }
